removed quote spacing fix in LP that is no longer needed but left in the reading version. This was causing excession recession in the first line of callouts when editing

--- a/theme.css
+++ b/theme.css
@@ -1500,9 +1500,6 @@ body {
     --blockquote-border-thickness: 2px;
 }
 /* correct quote padding */
-div.HyperMD-quote.HyperMD-quote-1.cm-line {
-    padding-inline-start: var(--size-4-3) !important;
-}
 .markdown-rendered blockquote {
     padding: 0 0 0 var(--size-4-3);
 }
